# wordlexord_webview

./: README.md  pyproject.toml
wordlexord_webview/: __init__.py  __main__.py  flask.py  utils.py
wordlexord_webview/static/: main.css
wordlexord_webview/templates/: guide.html  main.html
