[tool.poetry]
name = "wordlexord-webview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.46.0"
pywebview = "^4.4.1"
Flask = "^3.0.0"
wordlexord = "^0.0.2"

[tool.poetry.scripts]
wl_web = "wordlexord_webview:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
